# comply

./: .gitignore  .vale.ini  CLAUDE.md  Dockerfile  PRODUCT.md  README.md  finra-aml-converted_gap_report.html  pci-policy-converted_gap_report.html  pyproject.toml  weak-bsa-policy_gap_report.html
.vale/styles/FinCompliance/: BSA_BeneficialOwnership.yml  BSA_SARNarrativeFiveWs.yml  CrossDocumentReferences.yml  DataRetentionGaps.yml  ExaminerRedFlags.yml  GLBA_BreachNotification.yml  GLBA_OptOutRequirements.yml  GLBA_PrivacyNotice.yml  NCUA_CreditUnionSpecific.yml  PCI_ASVScanning.yml  PCI_EncryptionRequirements.yml  PCI_MFARequirement.yml  PCI_MediaDestruction.yml  PCI_PasswordRequirements.yml  PCI_PatchingTimeline.yml  ProhibitedPhrases.yml  ProhibitedTerms.yml  RegCC_LegacyAmounts.yml  RegE_ErrorResolutionTimeline.yml  RegE_MissingDisclosures.yml  RegulatoryReferences.yml  SOX_ControlDeficiencies.yml  SOX_EvidenceRequirements.yml  SOX_MaterialWeaknessIndicators.yml  SensitiveDataExposure.yml  StaleRegulatoryReferences.yml  UDAAP_BuriedDisclosures.yml  UDAAP_DeceptiveSpeed.yml  UnquantifiedFrequency.yml  UnspecifiedTimeframes.yml  VendorManagementGaps.yml
examples/: sample-bsa-policy.md
outreach/: distribution-channels.md  public-policies.md
regulatory-requirements/: bsa-aml.yaml  glba.yaml  pci-dss.yaml  reg-e.yaml  sox.yaml  udaap.yaml
reports/: ffiec-bsa-compliance-converted_gap_report.html  finra-aml-converted_gap_report.html  pci-policy-converted_gap_report.html  weak-consumer-disclosures_gap_report.html
scripts/: comply.py  run-tests.sh
src/fincompliance/: .vale.ini  __init__.py  cli.py  report.py
src/fincompliance/analysis/: engine.py  oscal.py
src/fincompliance/api/: server.py
tests/fail/: weak-bsa-policy.md  weak-consumer-disclosures.md  weak-pci-policy.md  weak-sox-controls.md
web/: package-lock.json
web/src/: App.jsx
(+24 files in other folders)
